unpackaged/main/default/objects/EncuestaConfig__c/EncuestaConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Encuestas</description>
    <label>Encuesta</label>
</CustomObject>