unpackaged/main/default/objects/EncuestaConfig__c/fields/Pregunta1__c.field-meta.xml
<CustomField>
    <fullName>Pregunta1__c</fullName>
    <label>Porcentaje1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>