unpackaged/main/default/objects/EncuestaConfig__c/fields/Pregunta2__c.field-meta.xml
<CustomField>
    <fullName>Pregunta2__c</fullName>
    <label>Porcentaje2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>