unpackaged/main/default/objects/EncuestaConfig__c/fields/Pregunta3__c.field-meta.xml
<CustomField>
    <fullName>Pregunta3__c</fullName>
    <label>Porcentaje3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>